[tool.poetry]
name = "migu-music-dl"
version = "0.1.0"
description = ""
authors = ["noone <noone@mars.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
