[tool.poetry]
name = "migu-music-dl"
version = "0.1.2"
description = "Migu music downloader"
authors = ["swim2sun <xiangyangyou@gmail.com>"]
repository = "https://github.com/swim2sun/migu-music-dl"
readme = "README.md"
keywords = ["migu", "music", "咪咕", "无损音乐"]
license = "GPL-3.0-only"
packages = [
  { include = "migu_music_dl" }
]

[tool.poetry.scripts]
migu-music-dl = "migu_music_dl.cli: download"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
click = "^8.0.3"
prettytable = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

